--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -22,14 +22,15 @@ const { title } = Astro.props;
   </head>
   <body>
     <slot name="Header"><Header /></slot>
+    <slot name="Hero"></slot>
     <div class="content"><slot /></div>
     <slot name="Footer"><Footer /></slot>
     <style>
       .content {
-        padding-inline: 1rem;
         margin-block: 1rem;
+        padding-inline: 1rem;
       }
-
+      
       @media (min-width: 40em) {
         .content {
           padding-inline: 5rem;
