--- a/src/components/Post.astro
+++ b/src/components/Post.astro
@@ -26,7 +26,7 @@ const {Content} = await post.render()
 
 <article class="post">
   <div class="post__title">
-    <a href={`/news/${post.slug}`}>{post.data.title}</a>
+    <a href={`/post/${post.slug}`}>{post.data.title}</a>
   </div>
   <div class="meta">
     <span>
@@ -50,9 +50,9 @@ const {Content} = await post.render()
       )
     }
   </div>
-  <div>{summary ? <a href={`/news/${post.slug}`}><PostImage post={post} /></a> : <PostImage post={post} />}</div>
+  <div>{summary ? <a href={`/post/${post.slug}`}><PostImage post={post} /></a> : <PostImage post={post} />}</div>
   <div>{summary ? <PostExcerpt post={post} /> : <Content />}</div>
-  {summary && <div class="post__continue"><a href={`/news/${post.slug}`}>Continue reading...</a></div>}
+  {summary && <div class="post__continue"><a href={`/post/${post.slug}`}>Continue reading...</a></div>}
 </article>
 
 <style>
