Add pagination to news list

--- a/src/pages/news/[...page].astro
+++ b/src/pages/news/[...page].astro
@@ -4,13 +4,14 @@ import type {
   GetStaticPaths,
 } from "astro";
 import { getCollection } from "astro:content";
+import Pagination from "@philnash/astro-pagination";
 
 import Layout from "@layouts/Layout.astro";
 import Post from "@components/Post.astro"
 
 export const getStaticPaths = (async ({paginate}) => {
   const posts = (await getCollection("posts")).sort((a,b) => b.data.created.getTime() - a.data.created.getTime())
-  return paginate(posts, {pageSize: 3})
+  return paginate(posts, {pageSize: 8})
 }) satisfies GetStaticPaths;
 
 type Props = InferGetStaticPropsType<typeof getStaticPaths>;
@@ -20,22 +21,15 @@ const { page } = Astro.props
 <Layout title="News">
   <main>
     <h1>News</h1>
-    <ul>
-      <li>start: {page.start}</li>
-      <li>end: {page.end}</li>
-      <li>size: {page.size} of {page.total}</li>
-      <li>page: {page.currentPage} / {page.lastPage}</li>
-      <li>current: {page.url.current}</li>
-      <li>next: {page.url.next}</li>
-    </ul>
-
     <section class="posts">
       {
         page.data.map(async (post) => <Post post={post} summary></Post>)
       }
     </section>
 
-    
+    <div class="pagination">
+      <Pagination page={page} urlPattern="/news/{}" previousLabel="« Newer" nextLabel="Older »" /> 
+    </div>
   </main>
 </Layout>
 
