--- a/src/pages/news/[...page].astro
+++ b/src/pages/news/[...page].astro
@@ -20,11 +20,16 @@ const { page } = Astro.props
 
 <Layout title="News">
   <main>
-    <h1>News</h1>
-    <section class="posts">
-      {
-        page.data.map(async (post) => <Post post={post} summary></Post>)
-      }
+    <section>
+      <div class="section-header underlined">
+        <h1>News</h1>
+      </div>
+
+      <div class="posts">
+        {
+          page.data.map(async (post) => <Post post={post} summary></Post>)
+        }
+      </div>
     </section>
 
     <div class="pagination">
