Add tags list to post meta

--- a/src/components/Post.astro
+++ b/src/components/Post.astro
@@ -14,7 +14,7 @@ interface Props {
 const { post, summary=false } = Astro.props;
 
 const authors = await getEntries(post.data.authors);
-
+const tags = post.data.tags ?? []
 const published = new Date(post.data.created).toLocaleDateString("en-GB", {
   weekday: "short",
   year: "numeric",
@@ -30,28 +30,39 @@ const {Content} = await post.render()
     <a href={`/post/${post.slug}`}>{post.data.title}</a>
   </div>
   <div class="meta">
-    <span>
+    <div>
       <Icon name="mdi:calendar-month" /><span>{published}</span>
-    </span>
-    <span>
-      <Icon name="mdi:account" />{
+    </div>
+    <div>
+      <Icon name="mdi:account" />
+      {
         authors.map((author) => (
-          <span class="meta__author">{author.data.name}</span>
+          <span class="meta__author">
+            {author.data.name}
+          </span>
         ))
       }
-    </span>
+    </div>
+    { tags.length !== 0 &&
+      <div>
+        <Icon name="mdi:tags" />
+        {
+          tags.map(tag => (
+            <span class="meta__tag">
+              <a href={`/tags/${tag}`}>{tag}</a>
+            </span>
+          ))
+        }        
+      </div>
+    }
     {
       false && (
-        <span>
-          <>
-            <Icon name="mdi:book-open-variant" />
-            <span>?? minutes</span>
-          </>
-        </span>
+        <div>
+          <Icon name="mdi:book-open-variant" />
+          <span>?? minutes</span>
+        </div>
       )
     }
-    <!-- TODO: RSS feed link -->
-    <!-- TODO: list of tags limited to first N? -->
   </div>
   <div>{summary ? <a href={`/post/${post.slug}`}><PostImage post={post} /></a> : <PostImage post={post} />}</div>
   <div>{summary ? <PostExcerpt post={post} /> : <Content />}</div>
@@ -98,7 +109,7 @@ const {Content} = await post.render()
     display: inline-flex;
     justify-content: start;
     align-items: center;
-
+  
     font-size: 0.7rem;
     text-transform: uppercase;
 
@@ -106,12 +117,10 @@ const {Content} = await post.render()
     margin-bottom: 1rem;
   }
 
-  .meta > span {
+  .meta > div {
     margin-inline-end: 0.5rem;
-  }
-
-  .meta * {
-    vertical-align: middle;
+    display: flex;
+    align-items: center;
   }
 
   .meta svg {
@@ -119,8 +128,7 @@ const {Content} = await post.render()
     padding-inline-end: 0.1rem;
   }
 
-  .meta__author:not(:last-child)::after {
+  .meta__author:not(:last-child)::after, .meta__tag:not(:last-child)::after {
     content: ", ";
   }
-
 </style>
