--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -10,7 +10,7 @@ import Layout from "@layouts/Layout.astro";
 import { Icon } from "astro-icon";
 
 export const getStaticPaths = (async () => {
-    const posts = await getCollection("posts");
+    const posts = (await getCollection("posts")).sort((a, b) => b.data.created.getTime() - a.data.created.getTime())
 
     const tags = [...new Set(posts.map(post => post.data?.tags ?? []).flat())]
     
