Update twitter link

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -23,7 +23,7 @@ import { Image } from "astro:assets";
         <a href="https://github.com/FPGAArcade/">
           <GithubIcon title="FPGAArcade GitHub" style="fill: white;" />
         </a>
-        <a href="https://twitter.com/ArcadeFPGA">
+        <a href="https://twitter.com/FPGAArcade">
           <XIcon title="FPGAArcade Twitter" style="fill: white;" />
         </a>
       </li>
