--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ const posts = (await getCollection("posts")).sort(
     <section>
       <div class="section-header underlined">
         <h1>Recent News</h1>
-        <div><a href="/news/">View all News</a></div>
+        <div><a href="/categories/">View all News</a></div>
       </div>
       
       <div class="featured-posts">
