--- a/src/pages/categories/[category]/[...page].astro
+++ b/src/pages/categories/[category]/[...page].astro
@@ -31,7 +31,7 @@ const params = Astro.params
     <section>
       <div class="section-header underlined">
         <h1>{params.category}</h1>
-        <div><a href="/categories/">View all News</a></div>
+        <div><a href="/categories/">View all categories</a></div>
       </div>
 
       <div class="posts">
