--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -16,7 +16,7 @@ import { Image } from "astro:assets";
   <nav class="nav" data-nav data-nav-open="false" data-nav-animating="false">
     <ul class="nav__list">
       <li><a href="/">Hardware</a></li>
-      <li><a href="/categories/news">News</a></li>
+      <li><a href="/blog/">Blog</a></li>
       <li><a href="https://docs.fpgaarcade.com/">Docs</a></li>
       <li><a href="https://build.fpgaarcade.com/releases">Releases</a></li>
       <li>
