--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,8 +13,8 @@ const posts = (await getCollection("posts")).sort(
   <main>
     <section>
       <div class="section-header underlined">
-        <h1>Recent News</h1>
-        <div><a href="/categories/">View all categories</a></div>
+        <h1>Recent Posts</h1>
+        <div><a href="/blog/">View all</a></div>
       </div>
       
       <div class="featured-posts">
