--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -22,17 +22,19 @@ const categoryInfo = categories.reduce((acc: Record<string,CategoryInfo>, val) =
 
 <Layout title="Tags">
   <main>
-    <div class="section-header underlined">
-      <h1>Categories</h1>
-    </div>
-    <ul>
-      {
-        Object.values(categoryInfo).map((category) => (
-          <li>
-            <a href={`/categories/${category.name}`}>{category.name}</a> ({category.count})
-          </li>
-        ))
-      }
-    </ul>
+    <section>
+      <div class="section-header underlined">
+        <h1>Blog Categories</h1>
+      </div>
+      <ul>
+        {
+          Object.values(categoryInfo).map((category) => (
+            <li>
+              <a href={`/blog/${category.name}`}>{category.name}</a> ({category.count})
+              </li>
+              ))
+            }
+      </ul>
+    </section>
   </main>
 </Layout>
