Extract blog layout

--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -6,7 +6,7 @@ import type {
 import { getCollection } from "astro:content";
 import Pagination from "@philnash/astro-pagination";
 
-import Layout from "@layouts/Layout.astro";
+import LayoutBlog from "@layouts/LayoutBlog.astro";
 import Post from "@components/Post.astro";
 
 interface CategoryInfo {
@@ -32,71 +32,40 @@ type Props = InferGetStaticPropsType<typeof getStaticPaths>;
 const { page, categories } = Astro.props
 
 ---
-<Layout title="Tags">
-  <main>
-    
-    <section class="section-categories">
-      <div class="section-header underlined">
-        <h1>Categories</h1>
-      </div>
-      <ul>
-        {
-          Object.values(categories).map((category) => (
-            <li>
-              <a href={`/blog/${category.name}`}>{category.name}</a> ({category.count})
-              </li>
-              ))
-            }
-      </ul>
-    </section>
+<LayoutBlog title="Blog">
+  <div slot="sidebar">
+    <div class="section-header underlined">
+      <h1>Categories</h1>
+    </div>
+    <ul>
+      {
+        Object.values(categories).map((category) => (
+          <li>
+            <a href={`/blog/${category.name}`}>{category.name}</a> ({category.count})
+            </li>
+            ))
+          }
+    </ul>
+  </div>
 
-    <section class="section-posts">
-      <div class="section-header underlined">
-        <h1>Posts</h1>
-      </div>
+  <section>
+    <div class="section-header underlined">
+      <h1>Posts</h1>
+    </div>
 
-      <div class="posts">
-        {
-          page.data.map(async (post) => <Post post={post} summary></Post>)
-        }
-      </div>
+    <div class="posts">
+      {
+        page.data.map(async (post) => <Post post={post} summary></Post>)
+      }
+    </div>
 
-      <div class="pagination">
-        <Pagination page={page} urlPattern={`/blog/{}`} previousLabel="« Newer" nextLabel="Older »" /> 
-      </div>
-    </section>
-
-  </main>
-</Layout>
+    <div class="pagination">
+      <Pagination page={page} urlPattern={`/blog/{}`} previousLabel="« Newer" nextLabel="Older »" /> 
+    </div>
+  </section>
+</LayoutBlog>
 
 <style>
-  main {
-    display: grid;
-    
-    grid-template-areas: "categories"
-                         "posts";
-    
-    justify-items: start;
-    gap: 1rem;
-  }
-  
-  @media(min-width: 767px) {
-    main {
-      grid-template-areas: "posts categories";
-      justify-items: center;
-    }
-  }
-
-  .section-categories {
-    grid-area: categories;
-  }
-
-  .section-posts {
-    grid-area: posts;
-  }
-
-  /* TODO: mobile layout stacking */
-
   .posts {
     display: grid;
     grid-gap: 1rem;
