--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -50,7 +50,7 @@ const { page, categories } = Astro.props
 
   <section>
     <div class="section-header underlined">
-      <h1>Posts</h1>
+      <h1>All Posts</h1>
     </div>
 
     <div class="posts">
