--- a/src/pages/blog/[category]/[...page].astro
+++ b/src/pages/blog/[category]/[...page].astro
@@ -10,23 +10,26 @@ export const getStaticPaths = (async ({ paginate }) => {
   const posts = (await getCollection("posts")).sort(
     (a, b) => b.data.created.getTime() - a.data.created.getTime()
   );
-  const categories = [
-    ...posts.map((post) => post.data.categories).flat(),
-  ].sort((a, b) => a.localeCompare(b));
+  const categories = [...posts.map((post) => post.data.categories).flat()].sort(
+    (a, b) => a.localeCompare(b)
+  );
 
-  const categoryInfo = categories.reduce((acc: Record<string, CategoryInfo>, val) => {
-    acc[val] = { name: val, count: (acc[val]?.count ?? 0) + 1 };
-    return acc;
-  }, {});
+  const categoryInfo = categories.reduce(
+    (acc: Record<string, CategoryInfo>, val) => {
+      acc[val] = { name: val, count: (acc[val]?.count ?? 0) + 1 };
+      return acc;
+    },
+    {}
+  );
 
-  return [... new Set(categories)].flatMap((category) => {
+  return [...new Set(categories)].flatMap((category) => {
     const categoryPosts = posts.filter((post) =>
       post.data.categories.includes(category)
     );
     return paginate(categoryPosts, {
       pageSize: 8,
       params: { category: category },
-      props: { categories: categoryInfo }
+      props: { categories: categoryInfo },
     });
   });
 }) satisfies GetStaticPaths;
@@ -45,8 +48,8 @@ const params = Astro.params;
       {
         Object.values(categories).map((category) => (
           <li>
-            <a href={`/blog/${category.name}`}>{category.name}</a> (
-            {category.count})
+            <a href={`/blog/${category.name}`}>{category.name}</a>
+            <span>({category.count})</span>
           </li>
         ))
       }
